--- a/blog/themes/default.css
+++ b/blog/themes/default.css
@@ -107,9 +107,15 @@ dd {
 }
 
 /* Misc */
-hr {
-	margin: 1.5rem 0;
-	border-top: 1px solid #f8f8f8;
+ hr{ 
+ 	border: 0;
+ 	 height: 1px;
+ 	  background-image: -webkit-linear-gradient(left, rgba(0,0,0,0), rgba(0,0,0,0.75), rgba(0,0,0,0));
+ 	  background-image: -moz-linear-gradient(left, rgba(0,0,0,0), rgba(0,0,0,0.75), rgba(0,0,0,0));
+ 	  background-image: -ms-linear-gradient(left, rgba(0,0,0,0), rgba(0,0,0,0.75), rgba(0,0,0,0));
+ 	  background-image: -o-linear-gradient(left, rgba(0,0,0,0), rgba(0,0,0,0.75), rgba(0,0,0,0)); 
+ 	margin: 3em;
+ 	}
 }
 
 /* Code */
